--- a/exercises/introducao-a-html-e-css_4/style.css
+++ b/exercises/introducao-a-html-e-css_4/style.css
@@ -66,12 +66,20 @@ img#estomatopode1{
 
 
 #referencia{
+     background-image: linear-gradient(to right, rgb(203, 253, 188), rgb(10, 236, 225)); 
+     color: rgb(255, 255, 255);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
-#footer {
+#footer h6{
     text-align: end;
-    background-image: linear-gradient(to right, rgb(203, 253, 188), rgb(10, 236, 225));
-    color: rgb(82, 82, 82);
+    font-size: 20px;
+    margin-right: 1px;
    
+}
+
+#linkedin-icon{
+    width: 20px;
+    margin-top: 5px;
+    margin-left: 5px;
 }
